--- a/webviewer/src/index.css
+++ b/webviewer/src/index.css
@@ -1,6 +1,71 @@
-
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:300|Source+Sans+Pro:400,400i,600,600i&subset=cyrillic');
+@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:300|Source+Sans+Pro:400,400i,600,600i&subset=cyrillic");
 body {
-	font-family: "Source Sans Pro", sans-serif;
-	font-weight: 400;
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 400;
+}
+
+html, body {
+    height: 100%;
+}
+
+.container {
+    display: flex;
+    height: 100%;
+}
+
+.button {
+    background-color: rgb(0, 120, 212);
+    border: 1px solid rgb(0, 120, 212);
+    border-radius: 3px;
+    color: rgb(255, 255, 255);
+    padding: 10px;
+    appearance: none;
+    min-width: 70px;
+    transition: all 0.3s ease-in-out;
+    outline: none;
+    cursor: pointer;
+}
+
+.button--login {
+    margin: 1em
+}
+
+.button:hover {
+    background-color: rgb(0, 120, 212, 0.8);
+    border-color: rgb(0, 120, 212, 0.8);
+}
+
+/* layers  */
+
+.relative {
+    position: absolute;
+    top: 50px;
+    border-radius: 3px;
+    box-shadow: 0px 10px 30px -20px;
+}
+
+.layers {
+    position: fixed;
+    top: 50px;
+    left: 50px;
+    z-index: 10;
+    background-color: white;
+}
+
+.layers__container {
+    max-height: 300px;
+    overflow-y: auto;
+    border-radius: 3px;
+}
+
+.layers__item {
+    padding: 10px;
+    font-size: 16px;
+    border-top: 1px solid rgb(237, 235, 233);
+    background-color: rgb(255, 255, 255);
+    cursor: pointer;
+}
+
+.layers__item:hover {
+    background-color: rgb(237, 235, 233);
 }
