--- a/webviewer/src/styles/index.css
+++ b/webviewer/src/styles/index.css
@@ -219,10 +219,18 @@ body {
 .map {
     top: 0;
     bottom: 0;
-    left: 250px;
+    left: 0;
     right: 0;
     position: absolute;
     z-index: 1;
+}
+
+.leaflet-top.leaflet-left {
+    left: 250px;
+}
+
+.map--active .leaflet-top.leaflet-left {
+    left: 550px;
 }
 
 .close--plotly {
@@ -247,6 +255,34 @@ body {
 .aoislist__item {
     padding: 10px;
     border-bottom: 1px solid rgb(211, 209, 208);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.aoislist__item-arrow {
+    position: relative;
+}
+
+.aoislist__item-arrow::before,
+.aoislist__item-arrow::after {
+    display: block;
+    position: absolute;
+    content: "";
+    width: 2px;
+    background-color: rgb(96, 94, 92);
+    height: 10px;
+    top: -5px;
+    left: -4px;
+}
+
+.aoislist__item-arrow::before {
+    transform: rotate(45deg);
+}
+
+.aoislist__item-arrow::after {
+    transform: rotate(-45deg);
+    left: -11px;
 }
 
 .aoislist__emptyitem {
@@ -265,6 +301,47 @@ body {
     color: rgb(255, 255, 255);
 }
 
+.aoislist__item:hover .aoislist__item-arrow::before,
+.aoislist__item:hover .aoislist__item-arrow::after,
+.aoislist__item--active .aoislist__item-arrow::before,
+.aoislist__item--active .aoislist__item-arrow::after {
+    background-color: rgb(255, 255, 255);
+}
+
 .aoislist__item:last-child {
     border-bottom: none;
+}
+
+/* request form */
+
+.fixed--aoisform {
+    left: 250px;
+    top: 0;
+    bottom: 0;
+    border-right: 1px solid rgb(96, 94, 92);
+    background-color: rgb(255, 255, 255);
+    display: none;
+    width: 300px;
+}
+
+.fixed--aoisform.active {
+    display: block;
+}
+
+.aoisform-holder {
+    padding: 10px;
+    width: 100%;
+}
+
+.aoisform__title {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.aoisform__request, .aoisform__from, .aoisform__to {
+    margin-bottom: 10px;
+}
+
+.request__label, .date__label {
+    margin-bottom: 5px;
 }
