--- a/webviewer/src/styles/components/AoIAnnotations.css
+++ b/webviewer/src/styles/components/AoIAnnotations.css
@@ -29,6 +29,7 @@
 }
 
 .aoi-annotaino-label-color {
+    flex: 0 0 auto;
     width: 34px;
     height: 34px;
     border-radius: 6px;
@@ -44,9 +45,10 @@
 }
 
 .aoi-annotaino-label-title {
-    font-weight: 500;
+    font-weight: 600;
     color: #3b4148;
     display: block;
+    margin-top: 0;
     margin-bottom: 5px;
 }
 
